# video_analysis_v2

./: .gitignore  README.md  debug_bird_dog.py  debug_bs_knee.py  debug_cat_cow.py  inspect_metric.py  manage_iteration.py  pyproject.toml  requirements.txt  test_blazepose_fix.py  test_counter.py  test_phase_detection.py  test_requirements.txt  test_video.py  test_viewpoint_debug.py  train_action.py
.plan/: iOS检测项代码生成开发计划.md  task.md  tdd_development_plan.md
config/: __init__.py  settings.py
config/action_configs/: arabesque_static_config.json  bird_dog_trained.json  bulgarian_squat_trained.json  calf_stretch_static_config.json  cat_cow_trained.json  copenhagen_plank_static_config.json  deadlift.json  hamstring_stretch_static_config.json  itb_stretch_static_config.json  lunge.json  lunge_static_config.json  plank.json  plank_static_config.json  pushup.json  quadriceps_stretch_static_config.json  reverse_nordic_trained.json  side_leg_raise.json  side_lift_trained.json  side_plank_static_config.json  side_stretch_static_config.json  single_leg_stance_static_config.json  squat.json  straight_leg_raise_trained.json
config/ios_codegen/: metric_item_registry.json
docs/: ARCHITECTURE_V2.md  TRAINING_GUIDE.md
docs/design/: action_analysis_output_contract.md  action_analysis_v2_design.md  action_analysis_v2_design_v2.md  arabesque_ios_mapping.md  bird_dog_ios_mapping.md  bulgarian_squat_ios_mapping.md  calf_stretch_ios_mapping.md  cat_cow_ios_mapping.md  copenhagen_plank_ios_mapping.md  dual_layer_phase_counting_design.md  hamstring_stretch_ios_mapping.md  ios_action_config_migration_design.md  ios_detection_item_registry_checklist.md  ios_static_action_migration_design.md  itb_stretch_ios_mapping.md  lunge_ios_mapping.md  p1p2_state_machine_counting_design.md  plank_ios_mapping.md  quadriceps_stretch_ios_mapping.md  reverse_nordic_ios_mapping.md  side_lift_ios_item2_item3_mapping.md  side_plank_ios_mapping.md  side_stretch_ios_mapping.md  single_leg_stance_ios_mapping.md  static_action_analysis_design.md  (+2 more)
examples/: jumping_jack_config.json
plan/: task.md
scripts/: arabesque_static_input.json  bird_dog_training.json  bulgarian_squat_training.json  calf_stretch_static_input.json  cat_cow_training.json  copenhagen_plank_static_input.json  example_static_input.json  extract_static_action.py  hamstring_stretch_static_input.json  itb_stretch_static_input.json  lunge_static_input.json  quadriceps_stretch_static_input.json  reverse_nordic_training.json  side_lift_training.json  side_plank_static_input.json  side_stretch_static_input.json  single_leg_stance_static_input.json  straight_leg_raise_training.json  test_static_action_realtime_overlay.py  train_action_generic.py  train_side_lift.py
src/: __init__.py
src/api/: __init__.py  (+3 more)
(+119 files in other folders)
